# agent-serializer

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_serializer/: __init__.py  binary_serializer.py  decorators.py  serializer.py  typed_serializer.py
tests/: test_serializer.py
