[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-serializer"
version = "1.0.0"
description = "Production-grade serialization and deserialization for agent data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []  # zero external deps — stdlib only

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
